<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menu"
    tools:context="com.example.semesterproject.activities.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="1"
        android:title="@string/settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:orderInCategory="2"
        android:title="@string/about"
        app:showAsAction="never" />

    <item
        android:id="@+id/check_addition"
        android:orderInCategory="3"
        android:title="@string/inc_add"
        app:showAsAction="never"
        android:checkable="true"
        android:checked="true" />

    <item
        android:id="@+id/check_subtraction"
        android:orderInCategory="4"
        android:title="@string/inc_sub"
        app:showAsAction="never"
        android:checkable="true"
        android:checked="true" />

    <item
        android:id="@+id/check_multiplication"
        android:orderInCategory="5"
        android:title="@string/inc_mult"
        app:showAsAction="never"
        android:checkable="true"
        android:checked="true" />

    <item
        android:id="@+id/check_division"
        android:orderInCategory="6"
        android:title="@string/inc_div"
        app:showAsAction="never"
        android:checkable="true"
        android:checked="true" />

</menu>